--- a/img/index.css
+++ b/img/index.css
@@ -48,8 +48,9 @@ padding-left: 5px;
 height: 12px;
 }
 .nav-top ul li:hover{
-background-color: rgb(4, 75, 122);
-border-radius: 7px;
+    background-color: rgb(4, 75, 122);
+    border-radius: 7px;
+    transition: 0.4s;
 }
 .nav-top ul{
     color: white;
@@ -72,6 +73,7 @@ border-radius: 7px;
 }
 .extra-menus .btn-extra{
     min-width: 100px;
+    /* transition: 1s; */
     color: #464c55;
     text-align: center;
     background-color: white;
@@ -80,6 +82,7 @@ border-radius: 7px;
 }
 .extra-menus .btn-extra:hover{
     min-width: 100px;
+    transition: 1s;
     color: #464c55;
     height: 43px;
     text-align: center;
@@ -158,7 +161,35 @@ border-radius: 7px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .home-bold button{
-    height: 30px;
+    height: 38px;
     width: 110px;
+    display: flex;
     position: relative;
+    margin-top:25%;
+    padding-left:12px ;
+    font-size: 12px;
+    margin-left:20%;
+    background: none;
+    gap: 3px;
+    padding-top:12px;
+    transition: 0.1s;
+    border-radius: 8px;
+    border: none;
+}
+.home-bold button:hover{
+    height: 38px;
+    width: 115px;
+    background-color: white;
+    gap: 6px;
+    font-size: 12.3px;
+    /* transition: 0.1s; */
+    /* padding: 3px; */
+    display: flex;
+    transition: 1s;
+    margin-left: 19.7%;
+}
+.gapping{
+    font-size: 10px;
+    padding-top: 2px;
+    color: rgb(148, 138, 51);
 }
