--- a/img/index.css
+++ b/img/index.css
@@ -194,20 +194,25 @@ height: 12px;
     color: rgb(148, 138, 51);
 }
 table tr{
+    transition: 1s;
     color: rgb(0, 39, 65);
 }
 .Monalisa{
-    width:80%;
+    width:90%;
 }
 .Monalisa tr .table-contents1{
     padding: 12px 12px;
     margin-left: 80px;
+    transition: 1s;
     /* width: 150px; */
     zoom: 99%;
 }
 .Monalisa .table-contents1:hover{
 background-color: rgb(198, 219, 233);
-transform: scale(0.1);
+transform: scale(1.01);
+border-bottom: 2px solid rgb(76, 120, 150);
+
+transition: 0.2s;
 /* zoom: 100%; */
 }
 .Monalisa td img{
@@ -220,8 +225,74 @@ transform: scale(0.1);
 
 .Monalisa .table-contents1-mo:hover{
     background-color: rgb(198, 219, 233);
-    transform: scale(1.1);
+    border-bottom: 2px solid rgb(76, 120, 150);
+
+    transform: scale(1.01);
+    transition: 0.2s;
     }
     .monatd{
         width: 400px;
     }
+    .tbl-title{
+        color: rgb(0, 39, 65);
+        font-weight: 400;
+        /* width: 26%; */
+        /* position: absolute; */
+        /* font-size: 2px; */
+        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    
+    }
+    .inspiration{
+        /* position: absolute; */
+        font-weight: 400;
+        font-size: 22px;
+        /* width: 26%; */
+        color: rgb(0, 39, 65);
+        font-family:'Times New Roman', Times, serif;
+    
+    }
+    .table-contents1-mo button{
+        background: none;
+        border: none;
+        outline: none;
+    }
+    .blue-section{
+        width: 100%;
+        height: 800px;
+        background-color: rgb(3, 3, 94);
+        /* background: url(); */
+    }
+    .table-contents2 {
+        color: #fff;
+        margin-left: 50px;
+        width: 80%;
+        
+    }
+    
+    .table-contents2 .tbl-title{
+        color: #fff;
+        width: 100%;
+        
+    }
+    
+    .blue-section table img{
+        
+        width: 700px;
+        
+    }
+    
+    
+ hr{
+    width: 90px;
+    height: 5px;
+    border: none;
+    background-color:rgb(179, 161, 59);
+    /* margin-left: 40px; */
+ }
+ 
+ .table-contents2  .tbl-title,.research,p{
+    color: #fff;
+    margin-left: 30px;
+    /* width: 70%; */
+    
+}
