--- a/img/index.css
+++ b/img/index.css
@@ -258,7 +258,7 @@ transition: 0.2s;
     }
     .blue-section{
         width: 100%;
-        height: 800px;
+        height: 1180px;
         background-color: rgb(3, 3, 94);
         /* background: url(); */
     }
@@ -329,6 +329,11 @@ transition: 0.2s;
     border: 1px solid #fff;
     position: absolute;
     width: 690px;
-margin-top: -30%;
+margin-top: -29%;
     height: 390px;
+}
+.blue-section table{
+    margin-top: -30px;
+    position: absolute;
+    width:80%;
 }
