--- a/img/index.css
+++ b/img/index.css
@@ -337,3 +337,12 @@ margin-top: -29%;
     position: absolute;
     width:80%;
 }
+.atwork,h4,.research,p{
+    color: rgb(3, 3, 94);
+}
+.atwork{
+    display: flex;
+}
+.atwork .text{
+    
+}
