--- a/img/index.css
+++ b/img/index.css
@@ -641,3 +641,29 @@ margin-top: -29%;
         height: 52px;
         margin-left: 30px;
     }
+    footer{
+        display: flex;
+        justify-content: space-between;
+        background-color: rgb(226, 220, 220);
+        height: 80px;
+    }
+    footer ul{
+        list-style-type: none;
+        display: flex;
+        margin-top: 20px;
+        margin-left: 12px;
+        margin-right: 12px;
+        gap: 20px;
+    }
+    footer ul li{
+        padding-top: 6px;
+        padding: 12px;
+        height: 20px;
+
+    }
+    footer ul li:hover{
+        background-color: rgb(233, 237, 240);
+        border-radius: 7px; 
+         width: 80px;
+        transition: 0.4s;
+    }
